--- a/src/styles/banner.module.css
+++ b/src/styles/banner.module.css
@@ -2,7 +2,11 @@
   /* margin-top: 120px; */
   width: 100%;
   /* background-color: #3F88C5; */
-  background: linear-gradient(90deg, rgba(13,59,102,1) 3%, rgba(63,136,197,1) 64%);
+  background: linear-gradient(
+    90deg,
+    rgba(13, 59, 102, 1) 3%,
+    rgba(63, 136, 197, 1) 64%
+  );
   height: 550px;
   position: relative;
   box-shadow: 0 0 2px 2px rgba(216, 204, 204, 0.584);
@@ -18,12 +22,12 @@
   border-radius: 0 100px 100px 0;
   position: absolute;
   top: 100px;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
   box-shadow: 0 0 2px 2px rgba(245, 245, 245, 0.354);
 }
 
 .title:hover {
-  background-color: #EFF1F3;
+  background-color: #eff1f3;
   color: #002642;
 }
 
@@ -47,7 +51,7 @@
 }
 
 .download:hover {
-  background-color: #EFF1F3;
+  background-color: #eff1f3;
   color: #002642;
 }
 /* .title:hover + .download {
@@ -94,4 +98,41 @@
   border-radius: 15px;
   top: 330px;
   left: 835px;
+}
+
+@media (max-width: 1150px) {
+  .title {
+    width: 500px;
+    top: 50px;
+    -ms-text-size-adjust: auto;
+  }
+
+  .download {
+    width: 500px;
+    top: 165px;
+  }
+}
+
+@media (max-width: 560px) {
+  .title {
+    width: 98%;
+  }
+
+  .download {
+    width: 98%;
+  }
+}
+
+@media (max-width: 430px) {
+  .title h1 {
+    font-size: 22px;
+  }
+
+  .title h2 {
+    font-size: 16px;
+  }
+
+  .download {
+    top: 140px;
+  }
 }
