--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -4,29 +4,32 @@
 
 .form-container {
   width: 1100px;
-    display: flex;
-    justify-content: center;
-    /* border: solid 5px #bcebcb81; */
-    border-radius: 15px;
-    margin: 0 auto;
-    padding: 10px;
-    background: rgba(63,136,197,1);
-    box-shadow: 0 0 3px 3px rgba(128, 128, 128, 0.144);
+  display: flex;
+  justify-content: center;
+  /* border: solid 5px #bcebcb81; */
+  border-radius: 15px;
+  margin: 0 auto;
+  padding: 10px;
+  background: rgba(63, 136, 197, 1);
+  box-shadow: 0 0 3px 3px rgba(128, 128, 128, 0.144);
 }
 .contact-form {
   width: 500px;
-  
+
   padding: 10px;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  
 }
 
 .contact-title {
   width: 99%;
   /* background-color: #002642; */
-  background: linear-gradient(90deg, rgba(13,59,102,1) 3%, rgba(63,136,197,1) 64%);
+  background: linear-gradient(
+    90deg,
+    rgba(13, 59, 102, 1) 3%,
+    rgba(63, 136, 197, 1) 64%
+  );
   text-align: center;
   padding: 20px 0;
   color: #eff1f3;
@@ -37,73 +40,72 @@
 }
 
 .form-inputs {
-    width: 100%;
+  width: 100%;
   display: flex;
   gap: 20px;
   padding: 5px;
 }
 
 .form-field {
-    width: 250px;
+  width: 250px;
 }
 
 .form-field input {
-    width: 100%;
-    height: 40px;
-    border-radius: 5px;
-    border: none;
-    background-color: whitesmoke;
-    padding-left: 15px;
-    outline: 1px solid blue;
-    /* outline: 1px solid blue; */
-    /* color: rgba(0, 0, 0, 0.447); */
- 
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  border: none;
+  background-color: whitesmoke;
+  padding-left: 15px;
+  outline: 1px solid blue;
+  /* outline: 1px solid blue; */
+  /* color: rgba(0, 0, 0, 0.447); */
 }
 
 .form-field input::placeholder {
-  color: #74A4BC;
+  color: #74a4bc;
   font-weight: 600;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .textarea-container {
-    padding: 15px 5px 10px 5px;
+  padding: 15px 5px 10px 5px;
 }
 .textarea-container textarea {
-    width: 100%;
-    /* padding: 20px 5px 20px 5px; */
-    padding: 10px 0 0 14px;
-    height: 150px;
-    background-color: whitesmoke;
-    border: none;
-    border-radius: 5px;
-    outline: none;
-    overflow-y: auto;
-    resize: none;
+  width: 100%;
+  /* padding: 20px 5px 20px 5px; */
+  padding: 10px 0 0 14px;
+  height: 150px;
+  background-color: whitesmoke;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  overflow-y: auto;
+  resize: none;
 }
 
 .textarea-container textarea::placeholder {
-  color: #74A4BC;
+  color: #74a4bc;
   font-weight: 600;
   font-size: 14px;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .contact-form button {
-    padding: 10px 15px;
-    border: 3px solid whitesmoke;
-    margin: 10px;
-    font-size: 16px;
-    background: none;
-    border-radius: 5px;
-    cursor: pointer;
-    color: whitesmoke;
-    transition: all ease .4s;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding: 10px 15px;
+  border: 3px solid whitesmoke;
+  margin: 10px;
+  font-size: 16px;
+  background: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: whitesmoke;
+  transition: all ease 0.4s;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .contact-form button:hover {
   background-color: whitesmoke;
-  color: rgba(63,136,197,1);
+  color: rgba(63, 136, 197, 1);
   /* border: rgba(63,136,197,1) 3px solid; */
 }
 
@@ -119,4 +121,63 @@
 .contact-icon {
   display: flex;
   gap: 10px;
+}
+
+@media (max-width: 1150px) {
+
+  .contact-container {
+    height: fit-content;
+  }
+
+  .form-container {
+    width: fit-content;
+    flex-direction: column;
+    margin-bottom: 30px;
+  }
+
+  .contact-title {
+    margin-bottom: 30px;
+  }
+
+
+
+  .contacts {
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 0;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 15px;
+    color: whitesmoke;
+  }
+
+
+}
+
+@media (max-width: 560px){
+
+  .form-container {
+    margin: 0 5px 30px 3px;
+    width: 97%;
+  }
+
+  .contact-form{
+    width: 100%;
+   
+  }
+
+  .form-inputs {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .form-field {
+    width: 100%;
+  }
+
+  .contacts {
+    font-size: 12px
+  }
 }
