--- a/src/styles/banner.module.css
+++ b/src/styles/banner.module.css
@@ -7,7 +7,7 @@
     rgba(13, 59, 102, 1) 3%,
     rgba(63, 136, 197, 1) 64%
   );
-  height: 550px;
+  height: 90%;
   position: relative;
   box-shadow: 0 0 2px 2px rgba(216, 204, 204, 0.584);
   overflow-x: hidden;
@@ -17,7 +17,7 @@
   cursor: pointer;
   background-color: #002642;
   color: whitesmoke;
-  width: 600px;
+  width: 50%;
   text-align: end;
   padding: 20px 40px 20px 0;
   border-radius: 0 100px 100px 0;
@@ -102,7 +102,7 @@
 }
 
 @media (max-width: 1150px) {
-  .title {
+  /* .title {
     width: 500px;
     top: 50px;
     -ms-text-size-adjust: auto;
@@ -111,22 +111,53 @@
   .download {
     width: 500px;
     top: 165px;
+  } */
+
+  .banner-container {
+    height: 90vh;
   }
+
+  .title {
+    top: 10%;
+    /* width: 98%; */
+  }
+
+  .download {
+    top: 10%;
+    width: 98%;
+  }
+}
+
+@media (max-width: 850px) {
+  .banner-container {
+    height: 100vh;
+  }
+
+  .title {
+    top: 10%;
+    width: 80%;
+  }
+
+  .download {
+    top: 10%;
+    width: 98%;
+  }
+
 }
 
 @media (max-width: 560px) {
 
   .banner-container {
-    height: 800px;
+    height: 100vh;
   }
 
   .title {
-    top: 160px;
+    top: 10%;
     width: 98%;
   }
 
   .download {
-    top: 275px;
+    top: 10%;
     width: 98%;
   }
 }
