--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -1,25 +1,33 @@
 .about-container {
+  margin-top: 80px;
   height: fit-content;
-  padding-top: 30px;
-  margin-bottom: 70px;
+  padding-top: 100px;
+  padding-bottom: 40px;
+  margin-bottom: 120px;
+  background-color: #E15634;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .about-resume {
+  width: 100%;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  margin-bottom: 80px;
 }
 
 .about-title {
-    width: 99%;
+    width: 300px;
     /* background-color: #002642; */
-    background: linear-gradient(90deg, rgba(13,59,102,1) 3%, rgba(63,136,197,1) 64%);
+    background: #086788;
     text-align: center;
-    padding: 20px 0 20px 0;
-    color: #EFF1F3;
-    margin-bottom: 50px;
-    border-radius: 0 50px 50px 0;
-    box-shadow: 0 0 2px 2px rgba(216, 204, 204, 0.584);
+    padding: 5px 0;
+    color: whitesmoke;
+    margin-bottom: 60px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 3px 4px rgba(0, 0, 0, 0.094);
     /* margin-top: 25px; */
 }
 
@@ -27,6 +35,9 @@
   width: 500px;
   height: fit-content;
   /* border: solid 1px grey; */
+  background-color: whitesmoke;
+  border-radius: 15px;
+  box-shadow: 2px 2px 3px 4px rgba(0, 0, 0, 0.094);
 }
 
 .hi-there h3, .fullstack h3 {
@@ -61,6 +72,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 50px;
 }
 
 .icono {
@@ -86,4 +98,16 @@
   display: flex;
   justify-content: space-around;
   width: 250px;
+}
+
+@media (max-width: 1000px) {
+  .about-resume {
+    gap: 40px;
+  }
+}
+
+@media (max-width: 550px) {
+  .about-resume {
+    padding: 0 5px;
+  }
 }
