--- a/src/styles/banner.module.css
+++ b/src/styles/banner.module.css
@@ -2,11 +2,7 @@
   /* margin-top: 120px; */
   width: 100%;
   /* background-color: #3F88C5; */
-  background: linear-gradient(
-    90deg,
-    rgba(13, 59, 102, 1) 3%,
-    rgba(63, 136, 197, 1) 64%
-  );
+  background: #086788;
   height: 90%;
   position: relative;
   box-shadow: 0 0 2px 2px rgba(216, 204, 204, 0.584);
@@ -18,13 +14,18 @@
   background-color: #002642;
   color: whitesmoke;
   width: 50%;
+  height: 200px;
   text-align: end;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 20px 40px 20px 0;
   border-radius: 0 100px 100px 0;
   position: absolute;
   top: 100px;
   transition: all 0.5s ease;
-  box-shadow: 0 0 2px 2px rgba(245, 245, 245, 0.354);
+  /* box-shadow: 0 0 2px 2px rgba(245, 245, 245, 0.354); */
+  box-shadow: 0 0 3px 6px rgba(43, 40, 40, 0.123);
 }
 
 .title:hover {
@@ -37,18 +38,20 @@
   visibility: visible;
 }
 .download {
-  opacity: 0;
-  visibility: hidden;
+  /* opacity: 0;
+  visibility: hidden; */
   transition: opacity 0.3s ease, visibility 0.3s ease;
-  width: 50%;
+  width: 200px;
   position: absolute;
-  top: 215px;
-  background-color: #002642;
+  top: 320px;
+  left: 26%;
+  background-color: #E15634;
   color: whitesmoke;
-  border-radius: 0 15px 15px 0;
-  padding: 5px 10px;
-  text-align: end;
+  border-radius: 25px;
+  padding: 15px 10px;
+  text-align: center;
   cursor: pointer;
+  box-shadow: 0 0 3px 6px rgba(43, 40, 40, 0.123);
 }
 
 .download:hover {
@@ -59,46 +62,27 @@
   display: block;
 } */
 
-.cubo {
+.icon-container {
+  width: fit-content;
   position: absolute;
-  width: 50px;
-  height: 50px;
-  background-color: #347ec4ec;
-  border-radius: 15px;
-  top: 330px;
-  left: 745px;
-  z-index: 4;
-  cursor: grabbing;
+  bottom: 20px;
+  left: 48%;
+  
 }
 
-.cubo2 {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  background-color: #002742dd;
-  border-radius: 15px;
-  top: 290px;
-  left: 700px;
+.icon {
+  font-size: 50px;
+  color: #E15634;
+  position: relative;
+  background-color: whitesmoke;
+  border-radius: 50%;
+  box-shadow: 0 0 3px 6px rgba(43, 40, 40, 0.123);
+  animation: salto 0.8s infinite;
 }
 
-.cubo3 {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  background-color: #002742dd;
-  border-radius: 15px;
-  top: 290px;
-  left: 790px;
-}
-
-.cubo4 {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  background-color: #347ec4ec;
-  border-radius: 15px;
-  top: 330px;
-  left: 835px;
+@keyframes salto {
+  0%, 100% {top: 0;}
+  30% {top: -25px;}
 }
 
 @media (max-width: 1150px) {
@@ -123,8 +107,8 @@
   }
 
   .download {
-    top: 28%;
-    width: 50%;
+    top: 300px;
+    
   }
 }
 
@@ -139,8 +123,8 @@
   }
 
   .download {
-    top: 25%;
-    width: 80%;
+    top: 295px;
+  
   }
 
 }
@@ -156,10 +140,10 @@
     width: 98%;
   }
 
-  .download {
+  /* .download {
     top: 25%;
     width: 98%;
-  }
+  } */
 }
 
 @media (max-width: 430px) {
@@ -171,7 +155,7 @@
     font-size: 16px;
   }
 
-  .download {
+  /* .download {
     top: 24%;
-  }
+  } */
 }
