--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -1,5 +1,13 @@
 .contact-container {
-  height: 80vh;
+  height: fit-content;
+  background-color: #E15634;
+  margin-top: 120px;
+  padding-top: 90px;
+  padding-bottom: 100px;
+  /* margin-bottom: 100px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .form-container {
@@ -10,8 +18,8 @@
   border-radius: 15px;
   margin: 0 auto;
   padding: 10px;
-  background: rgba(63, 136, 197, 1);
-  box-shadow: 0 0 3px 3px rgba(128, 128, 128, 0.144);
+  background: #086788;
+  box-shadow: 2px 2px 3px 4px rgba(0, 0, 0, 0.094);
 }
 .contact-form {
   width: 500px;
@@ -23,19 +31,15 @@
 }
 
 .contact-title {
-  width: 99%;
+  width: 300px;
   /* background-color: #002642; */
-  background: linear-gradient(
-    90deg,
-    rgba(13, 59, 102, 1) 3%,
-    rgba(63, 136, 197, 1) 64%
-  );
+  background: #086788;
   text-align: center;
-  padding: 20px 0;
+  padding: 5px 0;
   color: #eff1f3;
   margin-bottom: 100px;
-  border-radius: 0 50px 50px 0;
-  box-shadow: 0 0 2px 2px rgba(216, 204, 204, 0.584);
+  border-radius: 10px;
+  box-shadow: 2px 2px 3px 4px rgba(0, 0, 0, 0.094);
   /* margin-top: 25px; */
 }
 
@@ -57,9 +61,16 @@
   border: none;
   background-color: whitesmoke;
   padding-left: 15px;
-  outline: 1px solid blue;
+  outline: none;
+  /* outline: 1px solid blue; */
   /* outline: 1px solid blue; */
   /* color: rgba(0, 0, 0, 0.447); */
+}
+
+.form-field input:focus {
+  outline: solid 4px #E15634;
+  /* border: solid 3px black; */
+ 
 }
 
 .form-field input::placeholder {
@@ -90,6 +101,11 @@
   font-size: 14px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+
+.textarea-container textarea:focus {
+  outline: solid 4px #E15634;
+}
+
 .contact-form button {
   padding: 10px 15px;
   border: 3px solid whitesmoke;
