--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,7 +1,7 @@
 .footer-container {
     width: 100%;
     height: 120px;
-    background: linear-gradient(90deg, rgba(13,59,102,1) 3%, rgba(63,136,197,1) 64%);
+    background: #086788;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,5 +16,5 @@
 }
 
 .icono:hover {
-color: rgba(220, 210, 210, 0.904);
+color: #DB7F67;
 }
