--- a/src/styles/nav.module.css
+++ b/src/styles/nav.module.css
@@ -1,6 +1,6 @@
 .nav-container {
     position: absolute;
-    top: 50%;
+    top: 30%;
     right: -300px;
     transition: all ease 0.8s;
     z-index: 5;
@@ -14,9 +14,10 @@
     align-items: flex-start;
     justify-content: space-around;
     padding: 20px 0 20px 0;
-    background-color: #002642;
+    background-color: #E15634;
     border-radius: 15px 0 0 15px;
-    box-shadow: 0 0 2px 2px rgba(245, 245, 245, 0.354);
+    /* box-shadow: 0 0 2px 2px rgba(245, 245, 245, 0.354); */
+    box-shadow: 0 0 3px 6px rgba(43, 40, 40, 0.123);
     z-index: 5;
 }
 
@@ -85,18 +86,18 @@
 
 @media (max-width: 1150px) {
     .nav-container {
-        top: 50%;
+        top: 47%;
     }
 }
 
 @media (max-width: 850px) {
 .nav-container {
-    top: 50%;
+    top: 46%;
 }
   }
 
 @media (max-width: 560px) {
-    .nav-container {
+    /* .nav-container {
         top: 50%;
-    }
+    } */
 }
