--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -1,21 +1,22 @@
 .projects-container {
   height: fit-content;
   margin-bottom: 50px;
+  background-color: #086788;
+  padding-top: 90px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .projects-title {
-  width: 99%;
-  background: linear-gradient(
-    90deg,
-    rgba(13, 59, 102, 1) 3%,
-    rgba(63, 136, 197, 1) 64%
-  );
+  width: 300px;
+  background: #E15634;
   text-align: center;
-  padding: 20px 0;
+  padding: 5px 0;
   color: #eff1f3;
-  margin-bottom: 40px;
-  border-radius: 0 50px 50px 0;
-  box-shadow: 0 0 2px 2px rgba(216, 204, 204, 0.584);
+  margin-bottom: 60px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 3px 4px rgba(27, 25, 25, 0.171);
   /* margin-top: 25px; */
 }
 
@@ -24,14 +25,18 @@
   justify-content: space-around;
   flex-wrap: wrap;
   gap: 50px;
+  padding-bottom: 80px;
 }
 
 .project {
   max-width: 500px;
   height: fit-content;
-  box-shadow: 0 0 15px 5px rgba(128, 128, 128, 0.381);
+  box-shadow: 2px 2px 3px 4px rgba(27, 25, 25, 0.171);
   cursor: pointer;
   transition: all 0.3s ease;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  /* border: solid 15px #E15634; */
 }
 
 .project:hover {
@@ -39,6 +44,7 @@
 }
 .project img {
   width: 100%;
+  border-radius: 10px 10px 0 0;
 }
 
 .project h4 {
@@ -73,7 +79,7 @@
 .image-container img {
   max-width:100%;
   max-height: 65vh;
-  box-shadow: 0 0 15px 5px rgba(215, 206, 206, 0.66);
+  box-shadow: 0 0 15px 5px rgba(150, 144, 144, 0.66);
 }
 
 .btn-image-up {
@@ -86,7 +92,7 @@
   height: 30px;
   border-radius: 50%;
   padding: 10px;
-  background-color: rgba(63,136,197,1);
+  background-color: #E15634;
   color: whitesmoke;
   box-shadow: 0 0 10px 5px rgba(222, 214, 214, 0.648);
 }
@@ -104,7 +110,7 @@
   font-size: 32px;
   border-radius: 50%;
   padding: 10px;
-  background-color: rgba(63,136,197,1);
+  background-color: #E15634;
   color: whitesmoke;
   box-shadow: 0 0 10px 5px rgba(222, 214, 214, 0.648);
 }
@@ -119,12 +125,13 @@
   display: flex;
   flex-direction: column;
   width: 65%;
+  color: whitesmoke;
 }
 
 .text-container h4 {
   font-size: 18px;
   margin-bottom: 5px;
-  color: rgba(0, 0, 0, 0.774);
+  color: whitesmoke;
 }
 
 .text-container button {
@@ -132,13 +139,16 @@
   padding: 5px 10px;
   margin-top: 4px;
   cursor: pointer;
-  background: none;
+  transition: all ease .3s;
+  color: whitesmoke;
+  background-color: #E15634;
+  
   border-radius: 5px;
-  border: 2px solid rgba(63,136,197,1);
+  border: none;
 }
 
 .text-container button:hover {
-  background-color:rgba(63,136,197,1) ;
+  background-color:#f56743;
   color: whitesmoke;
 }
 
