--- a/src/styles/banner.module.css
+++ b/src/styles/banner.module.css
@@ -1,16 +1,16 @@
-.banner-container {
-  /* margin-top: 120px; */
+/* .banner-container {
+ 
   width: 100%;
-  /* background-color: #3F88C5; */
-  background: #086788;
-  height: 90%;
+
+  background: none;
+  height: 100vh;
   position: relative;
-  box-shadow: 0 0 2px 2px rgba(216, 204, 204, 0.584);
+ 
   overflow-x: hidden;
 }
 
 .title {
-  /* cursor: pointer; */
+ 
   background-color: #002642;
   color: whitesmoke;
   width: 50%;
@@ -24,22 +24,18 @@
   position: absolute;
   top: 100px;
   transition: all 0.5s ease;
-  /* box-shadow: 0 0 2px 2px rgba(245, 245, 245, 0.354); */
+ 
   box-shadow: 0 0 3px 6px rgba(43, 40, 40, 0.123);
 }
 
-/* .title:hover {
-  background-color: #eff1f3;
-  color: #002642;
-} */
+
 
 .download.visible {
   opacity: 1;
   visibility: visible;
 }
 .download {
-  /* opacity: 0;
-  visibility: hidden; */
+
   transition: opacity 0.3s ease, visibility 0.3s ease;
   width: 150px;
   position: absolute;
@@ -56,8 +52,7 @@
 }
 
 .download-eng {
-  /* opacity: 0;
-  visibility: hidden; */
+
   transition: opacity 0.3s ease, visibility 0.3s ease;
   width: 150px;
   position: absolute;
@@ -82,9 +77,7 @@
   background-color: #eff1f3;
   color: #002642;
 }
-/* .title:hover + .download {
-  display: block;
-} */
+
 
 .icon-container {
   width: fit-content;
@@ -98,7 +91,7 @@
   font-size: 50px;
   color: #e15634;
   position: relative;
-  /* background-color: whitesmoke; */
+
   border-radius: 50%;
   box-shadow: 0 0 3px 6px rgba(43, 40, 40, 0.123);
   animation: salto 0.8s infinite;
@@ -115,16 +108,6 @@
 }
 
 @media (max-width: 1150px) {
-  /* .title {
-    width: 500px;
-    top: 50px;
-    -ms-text-size-adjust: auto;
-  }
-
-  .download {
-    width: 500px;
-    top: 165px;
-  } */
 
   .banner-container {
     height: 90vh;
@@ -132,7 +115,7 @@
 
   .title {
     top: 10%;
-    /* width: 98%; */
+
   }
 
   .download {
@@ -190,10 +173,6 @@
     left: 12%;
   }
 
-  /* .download {
-    top: 25%;
-    width: 98%;
-  } */
 }
 
 @media (max-width: 430px) {
@@ -205,7 +184,73 @@
     font-size: 16px;
   }
 
-  /* .download {
-    top: 24%;
-  } */
+
+} */
+
+.banner-container {
+  height: 100%;
+  display: flex;
+}
+
+.image-container {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-container img {
+  border-radius: 50%;
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+  box-shadow: 0 0 8px 2px #24d4d0;
+  transition: transform 10s ease, box-shadow .3s ease;
+  cursor: pointer;
+}
+
+.image-container img:hover {
+  transform: rotate(360deg);
+  box-shadow: 0 0 15px 5px #24d4d0;
+
+}
+
+.title {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 15px;
+}
+.title h5 {
+  font-size: 16px;
+  color: #24d4d0;
+  font-weight: 200;
+}
+
+.title h1 {
+  color: white;
+  font-size: 58px;
+  font-weight: 300;
+}
+
+.title button {
+  width: 300px;
+  padding: 20px;
+  border-radius: 30px;
+  background-color: #014e45;
+  color: rgb(207, 207, 207);
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  box-shadow: 0 0 4px 1px #24d4d0;
+  cursor: pointer;
+  transition: all ease 0.3s;
+}
+
+.title button:hover {
+  box-shadow: 0 0 8px 2px #24d4d0;
+  background-color: #137d7b;
 }
