--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -1,10 +1,10 @@
 .contact-container {
   height: fit-content;
-  background-color: #E15634;
-  margin-top: 120px;
-  padding-top: 90px;
+  /* background-color: #E15634; */
+  /* margin-top: 120px; */
+  /* padding-top: 90px; */
   padding-bottom: 100px;
-  /* margin-bottom: 100px; */
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,15 +14,15 @@
   width: 1100px;
   display: flex;
   justify-content: center;
-  /* border: solid 5px #bcebcb81; */
+
   border-radius: 15px;
   margin: 0 auto;
   padding: 10px;
-  background: #086788;
-  box-shadow: 2px 2px 3px 4px rgba(0, 0, 0, 0.094);
+  /* background: #086788; */
+  /* box-shadow: 2px 2px 3px 4px rgba(0, 0, 0, 0.094); */
 }
 .contact-form {
-  width: 500px;
+  width: 700px;
 
   padding: 10px;
   border-radius: 5px;
@@ -32,51 +32,51 @@
 
 .contact-title {
   width: 300px;
-  /* background-color: #002642; */
-  background: #086788;
+  font-size: 70px;
+  /* background: #086788; */
   text-align: center;
   padding: 5px 0;
-  color: #eff1f3;
-  margin-bottom: 100px;
+  color: whitesmoke;
+  /* margin-bottom: 100px; */
   border-radius: 10px;
-  box-shadow: 2px 2px 3px 4px rgba(0, 0, 0, 0.094);
-  /* margin-top: 25px; */
+  /* box-shadow: 2px 2px 3px 4px rgba(0, 0, 0, 0.094); */
 }
 
 .form-inputs {
   width: 100%;
   display: flex;
+  flex-direction: column;
   gap: 20px;
   padding: 5px;
 }
 
 .form-field {
-  width: 250px;
+  width: 100%;
 }
 
 .form-field input {
   width: 100%;
-  height: 40px;
-  border-radius: 5px;
+  /* height: 40px; */
+  border-radius: 30px;
+  font-size: 25px;
   border: none;
-  background-color: whitesmoke;
-  padding-left: 15px;
+  background-color: rgba(0, 0, 0, 0.324);
+  padding: 15px 25px;
   outline: none;
-  /* outline: 1px solid blue; */
-  /* outline: 1px solid blue; */
-  /* color: rgba(0, 0, 0, 0.447); */
+  color: white;
+  transition: all .5s ease;
 }
 
 .form-field input:focus {
-  outline: solid 4px #E15634;
-  /* border: solid 3px black; */
- 
+  /* outline: solid 4px #e15634; */
+  box-shadow: 0 0 5px 2px #24d4d0;
 }
 
 .form-field input::placeholder {
-  color: #74a4bc;
+  color: rgba(96, 92, 92, 0.358);
+
   font-weight: 600;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  /* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; */
 }
 
 .textarea-container {
@@ -84,45 +84,54 @@
 }
 .textarea-container textarea {
   width: 100%;
-  /* padding: 20px 5px 20px 5px; */
-  padding: 10px 0 0 14px;
-  height: 150px;
-  background-color: whitesmoke;
+  padding: 20px 26px;
+  height: 240px;
+  background-color: rgba(0, 0, 0, 0.324);
+  font-size: 22px;
   border: none;
-  border-radius: 5px;
+  border-radius: 25px;
   outline: none;
   overflow-y: auto;
   resize: none;
+  color: whitesmoke;
+  transition: all .5s ease;
 }
 
 .textarea-container textarea::placeholder {
-  color: #74a4bc;
+  color: rgba(96, 92, 92, 0.358);
+
   font-weight: 600;
-  font-size: 14px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 24px;
+  /* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; */
 }
 
 .textarea-container textarea:focus {
-  outline: solid 4px #E15634;
+  /* outline: solid 4px #e15634; */
+  box-shadow: 0 0 5px 2px #24d4d0;
+
 }
 
 .contact-form button {
-  padding: 10px 15px;
-  border: 3px solid whitesmoke;
-  margin: 10px;
+  width: 300px;
+  padding: 20px;
+  border-radius: 30px;
+  background-color: #014e455b;
+  color: rgb(207, 207, 207);
   font-size: 16px;
-  background: none;
-  border-radius: 5px;
+  font-weight: 600;
+  border: none;
+  box-shadow: 0 0 6px .5px #24d4d0;
   cursor: pointer;
-  color: whitesmoke;
-  transition: all ease 0.4s;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  transition: all ease 0.3s;
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  margin-top: 8px;
 }
 
 .contact-form button:hover {
-  background-color: whitesmoke;
-  color: rgba(63, 136, 197, 1);
-  /* border: rgba(63,136,197,1) 3px solid; */
+  box-shadow: 0 0 8px 2px #24d4d0;
+  background-color: #137d7b;
 }
 
 .contacts {
@@ -140,7 +149,6 @@
 }
 
 @media (max-width: 1150px) {
-
   .contact-container {
     height: fit-content;
   }
@@ -155,8 +163,6 @@
     margin-bottom: 30px;
   }
 
-
-
   .contacts {
     width: fit-content;
     display: flex;
@@ -168,20 +174,16 @@
     padding-bottom: 15px;
     color: whitesmoke;
   }
-
-
 }
 
-@media (max-width: 560px){
-
+@media (max-width: 560px) {
   .form-container {
     margin: 0 5px 30px 3px;
     width: 97%;
   }
 
-  .contact-form{
+  .contact-form {
     width: 100%;
-   
   }
 
   .form-inputs {
@@ -194,6 +196,6 @@
   }
 
   .contacts {
-    font-size: 12px
+    font-size: 12px;
   }
 }
