--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -1,142 +1,146 @@
 .projects-container {
   height: fit-content;
   margin-bottom: 50px;
-  background-color: #086788;
-  padding-top: 90px;
+  /* background-color: #086788; */
+  /* padding-top: 90px; */
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .projects-title {
-  width: 300px;
-  background: #E15634;
+  width: 500px;
+  /* background: #E15634; */
   text-align: center;
   padding: 5px 0;
   color: #eff1f3;
   margin-bottom: 60px;
   border-radius: 10px;
-  box-shadow: 2px 2px 3px 4px rgba(27, 25, 25, 0.171);
-  /* margin-top: 25px; */
+  /* box-shadow: 2px 2px 3px 4px rgba(27, 25, 25, 0.171); */
+  font-size: 70px;
+
 }
 
 .project-container {
   width: 100%;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  gap: 50px;
+  display:grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 0 30px;
+  gap: 20px;
   padding-bottom: 80px;
 }
 
 .project {
-  width: 300px;
-  height: 400px;
+  width: 100%;
+  /* min-height: 400px; */
+  padding: 15px;
   box-shadow: 2px 2px 3px 4px rgba(27, 25, 25, 0.171);
   cursor: pointer;
   transition: all 0.3s ease;
-  background-color: whitesmoke;
-  border-radius: 20px;
+  background-color: rgba(49, 48, 48, 0.425);
+  border: 1px solid rgba(49, 48, 48, 0.425);
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  /* padding: 30px; */
-  /* border: solid 15px #E15634; */
+  /* justify-content: space-between; */
+  gap: 5px;
 }
 
 
 .project:hover {
-  transform: translateY(-6px);
+  border: solid 1px rgba(110, 107, 107, 0.466);
+  background-color: rgba(6, 6, 6, 0.792);
 }
 
-.project h1 {
+.project-img-container {
+ height: 70%;
+}
+
+.project-img-container img {
+ /* height: 100%; */
+ width: 100%;
+ border-radius: 10px;
+  object-fit: cover;
+}
+
+.project-text-container {
   width: 100%;
-  height: 40%;
-  /* background-color: chocolate; */
-  /* border-bottom-left-radius: 150px;
-  border-bottom-right-radius: 150px; */
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: gray;
-  font-size: 24px;
-  background-color: #0868883e;
- 
+  height: 130px;
+  background-color: rgba(70, 68, 68, 0.251);
+  border-radius: 10px;
+  padding: 15px;
+  color: whitesmoke;
+  /* font-weight: '700'; */
 }
 
-.project p {
-  color: gray;
-  height: 60%;
-  font-size: 14px;
-  padding: 20px;
-  text-align: justify;
-  box-shadow: 0 0 3px 5px rgba(0, 0, 0, 0.05);
-  
-}
 
-/* project view */
+/* VIEW */
+
 .view-container {
   width: 100%;
   height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* position: relative; */
+ position: relative;
   max-height: 100vh;
 }
 
 .image-container {
   width: 65%;
-  max-height: 70%;
+  max-height: 55vh;
   display: flex;
   justify-content: center;
-  position: relative;
+  /* position: relative; */
 }
 
 .image-container img {
-  max-width:100%;
-  max-height: 65vh;
+  /* max-width:100%; */
+  height: 55vh;
   box-shadow: 0 0 15px 5px rgba(150, 144, 144, 0.66);
 }
 
 .btn-image-up {
   position: absolute;
-  top: 45%;
-  right: 5%;
+  top: 25%;
+  right: 15%;
   cursor: pointer;
   width: 30px;
   font-size: 32px;
   height: 30px;
   border-radius: 50%;
   padding: 10px;
-  background-color: #E15634;
+  background-color: #037f71;
+  transition: all ease .3s;
   color: whitesmoke;
   box-shadow: 0 0 10px 5px rgba(222, 214, 214, 0.648);
 }
 
 .btn-image-up:hover {
-  transform: translateX(3px);
+  background-color: #078d7d;
+  box-shadow: 0 0 10px 5px #0addc4;
+
 }
 
 .btn-image-down {
   position: absolute;
-  top: 45%;
-  left: 5%;
+  top: 25%;
+  left: 15%;
   cursor: pointer;
   width: 32px;
   font-size: 32px;
   border-radius: 50%;
   padding: 10px;
-  background-color: #E15634;
+  background-color: #037f71;
+  transition: all ease .3s;
   color: whitesmoke;
   box-shadow: 0 0 10px 5px rgba(222, 214, 214, 0.648);
 }
 
 .btn-image-down:hover {
-  transform: translateX(-3px);
+  background-color: #078d7d;
+  box-shadow: 0 0 10px 5px #0addc4;
 }
 
 .text-container {
@@ -144,8 +148,10 @@
   padding: 10px 30px;
   display: flex;
   flex-direction: column;
-  width: 65%;
+  align-items: center;
+  width: 60%;
   color: whitesmoke;
+  margin-top: 20px;
 }
 
 .text-container h4 {
@@ -156,19 +162,19 @@
 
 .text-container button {
   width: fit-content;
-  padding: 5px 10px;
+  padding: 5px 15px;
   margin-top: 4px;
   cursor: pointer;
   transition: all ease .3s;
   color: whitesmoke;
-  background-color: #E15634;
+  background-color: #078d7d;
   
-  border-radius: 5px;
+  border-radius: 20px;
   border: none;
 }
 
 .text-container button:hover {
-  background-color:#f56743;
+  background-color:#0aa997;
   color: whitesmoke;
 }
 
