--- a/src/styles/banner.module.css
+++ b/src/styles/banner.module.css
@@ -190,6 +190,7 @@
 .banner-container {
   height: 100%;
   display: flex;
+  overflow-x: hidden;
 }
 
 .image-container {
@@ -206,14 +207,13 @@
   height: 250px;
   object-fit: cover;
   box-shadow: 0 0 8px 2px #24d4d0;
-  transition: transform 10s ease, box-shadow .3s ease;
+  transition: transform 10s ease, box-shadow 0.3s ease;
   cursor: pointer;
 }
 
 .image-container img:hover {
   transform: rotate(360deg);
   box-shadow: 0 0 15px 5px #24d4d0;
-
 }
 
 .title {
@@ -232,7 +232,7 @@
 
 .title h1 {
   color: white;
-  font-size: 58px;
+  font-size: 5vw;
   font-weight: 300;
 }
 
@@ -253,4 +253,45 @@
 .title button:hover {
   box-shadow: 0 0 8px 2px #24d4d0;
   background-color: #137d7b;
+}
+
+@media (max-width: 1100px) {
+  .banner-container {
+    flex-direction: column-reverse;
+    justify-content: space-around;
+  }
+
+  .image-container {
+    width: 100%;
+    height: 50%;
+  }
+
+  .title {
+    width: 100%;
+    height: 50%;
+    padding-left: 20px;
+  }
+}
+
+@media (max-width: 550px) {
+  .title {
+    margin-top: 50px;
+  }
+  .title h1 {
+    font-size: 40px;
+  }
+
+  .title button {
+    margin-top: 30px;
+    width: 200px;
+  }
+  .image-container {
+    background-color: rgba(0, 0, 0, 0.233);
+    height: 35%;
+  }
+  .image-container img {
+    width: 100%;
+    border-radius:0%;
+    box-shadow: 0 0 5px 2px rgba(255, 255, 255, 0.361);
+  }
 }
