--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -176,7 +176,11 @@
   }
 }
 
-@media (max-width: 560px) {
+@media (max-width: 550px) {
+
+  .contact-title {
+    font-size: 50px;
+  }
   .form-container {
     margin: 0 5px 30px 3px;
     width: 97%;
