--- a/src/styles/modal.module.css
+++ b/src/styles/modal.module.css
@@ -17,14 +17,14 @@
 background-color: white;
 width: 200px;
 height: 200px;
-border-radius: 10px;
+border-radius: 20px;
 display: flex;
 flex-direction: column;
 justify-content: space-around;
 align-items: center;
 position: relative;
 padding-top: 50px;
-box-shadow: 0 0 1px 2px rgba(188, 184, 184, 0.461);
+box-shadow: 0 0 8px 2px #58cb90;
 }
 
 .icono {
@@ -34,8 +34,8 @@ box-shadow: 0 0 1px 2px rgba(188, 184, 184, 0.461);
     font-size: 70px;
     background-color: white;
     border-radius: 50%;
-    color: #13db13;
-    box-shadow: 0 1px 2px 0px rgba(113, 108, 108, 0.598);
+    color: #139f9d;
+    box-shadow: 0 0 8px 2px #58cb90;
 }
 
 .modal-container h2 {
@@ -44,17 +44,18 @@ box-shadow: 0 0 1px 2px rgba(188, 184, 184, 0.461);
 }
 
 .modal-container button {
-    background: #13db13;
+    background: #1db968;
     border: none;
     padding: 6px 8px;
-    border-radius: 5px;
+    border-radius: 15px;
     width: 120px;
     color: white;
     font-weight: 600;
     box-shadow: 0 1px 2px 0px rgba(113, 108, 108, 0.598);
     cursor: pointer;
+    transition: all .3s ease;
 }
 
 .modal-container button:hover {
-    background-color: #1ea01e;
+    background-color: #29dc80;
 }
