--- a/src/styles/nav.module.css
+++ b/src/styles/nav.module.css
@@ -152,3 +152,9 @@
     transform: translateX(-240%); /* Se mueve hacia la izquierda */
   }
 }
+
+@media (max-width: 550px) {
+  .nav-container {
+    display: none;
+  }
+}
