--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -1,8 +1,8 @@
 .projects-container {
+  
   height: fit-content;
   margin-bottom: 50px;
-  /* background-color: #086788; */
-  /* padding-top: 90px; */
+  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,20 +10,19 @@
 
 .projects-title {
   width: 500px;
-  /* background: #E15634; */
+
   text-align: center;
   padding: 5px 0;
   color: #eff1f3;
   margin-bottom: 60px;
   border-radius: 10px;
-  /* box-shadow: 2px 2px 3px 4px rgba(27, 25, 25, 0.171); */
+  
   font-size: 70px;
-
 }
 
 .project-container {
   width: 100%;
-  display:grid;
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
   padding: 0 30px;
   gap: 20px;
@@ -32,7 +31,7 @@
 
 .project {
   width: 100%;
-  /* min-height: 400px; */
+
   padding: 15px;
   box-shadow: 2px 2px 3px 4px rgba(27, 25, 25, 0.171);
   cursor: pointer;
@@ -43,10 +42,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: space-between; */
+
   gap: 5px;
 }
-
 
 .project:hover {
   border: solid 1px rgba(110, 107, 107, 0.466);
@@ -54,13 +52,13 @@
 }
 
 .project-img-container {
- height: 70%;
+  height: 70%;
 }
 
 .project-img-container img {
- /* height: 100%; */
- width: 100%;
- border-radius: 10px;
+ 
+  width: 100%;
+  border-radius: 10px;
   object-fit: cover;
 }
 
@@ -71,9 +69,8 @@
   border-radius: 10px;
   padding: 15px;
   color: whitesmoke;
-  /* font-weight: '700'; */
+  
 }
-
 
 /* VIEW */
 
@@ -83,7 +80,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
- position: relative;
+  
   max-height: 100vh;
 }
 
@@ -92,55 +89,40 @@
   max-height: 55vh;
   display: flex;
   justify-content: center;
-  /* position: relative; */
+  position: relative;
 }
 
 .image-container img {
-  /* max-width:100%; */
+  
   height: 55vh;
   box-shadow: 0 0 15px 5px rgba(150, 144, 144, 0.66);
 }
 
-.btn-image-up {
+.btn-image-up,
+.btn-image-down {
   position: absolute;
-  top: 25%;
-  right: 15%;
+  top: 50%;
+  transform: translateY(-50%); /* Ajuste aquí */
   cursor: pointer;
-  width: 30px;
-  font-size: 32px;
-  height: 30px;
+  font-size: 60px;
   border-radius: 50%;
-  padding: 10px;
-  background-color: #037f71;
-  transition: all ease .3s;
-  color: whitesmoke;
-  box-shadow: 0 0 10px 5px rgba(222, 214, 214, 0.648);
+  transition: all ease 0.3s;
+  color: rgba(245, 245, 245, 0.865);
+  filter: drop-shadow(0 0 10px rgb(32, 30, 30));
 }
 
-.btn-image-up:hover {
-  background-color: #078d7d;
-  box-shadow: 0 0 10px 5px #0addc4;
-
+.btn-image-up {
+  right: 0%;
 }
 
 .btn-image-down {
-  position: absolute;
-  top: 25%;
-  left: 15%;
-  cursor: pointer;
-  width: 32px;
-  font-size: 32px;
-  border-radius: 50%;
-  padding: 10px;
-  background-color: #037f71;
-  transition: all ease .3s;
-  color: whitesmoke;
-  box-shadow: 0 0 10px 5px rgba(222, 214, 214, 0.648);
+  left: 0%;
 }
 
+.btn-image-up:hover,
 .btn-image-down:hover {
-  background-color: #078d7d;
-  box-shadow: 0 0 10px 5px #0addc4;
+  color: white;
+  scale: 110%;
 }
 
 .text-container {
@@ -163,18 +145,18 @@
 .text-container button {
   width: fit-content;
   padding: 5px 15px;
-  margin-top: 4px;
+  margin-top: 20px;
   cursor: pointer;
-  transition: all ease .3s;
+  transition: all ease 0.3s;
   color: whitesmoke;
-  background-color: #078d7d;
-  
+  background-color: #078d7d6b;
+  box-shadow: 0 0 5px 2px #0aa997;
   border-radius: 20px;
   border: none;
 }
 
 .text-container button:hover {
-  background-color:#0aa997;
+  background-color: #0aa997;
   color: whitesmoke;
 }
 
@@ -186,7 +168,7 @@
 }
 
 .page-link {
-  color: rgba(63,136,197,1);
+  color: rgba(63, 136, 197, 1);
   font-weight: 600;
   cursor: pointer;
 }
@@ -195,7 +177,13 @@
   color: rgba(63, 137, 197, 0.612);
 }
 
-@media (max-width: 1150px) {
+@media (max-width: 1100px) {
+  .projects-title {
+    width: 100%;
+  }
+  .project-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
   .project {
     margin-left: 5px;
@@ -211,18 +199,36 @@
   }
 }
 
-@media (max-width: 850px) {
+@media (max-width: 900px) {
+  .project-container {
+    grid-template-columns: repeat(1, 1fr);
+    place-items: center;
+    padding: 0 10px;
+  }
+
   .project {
-    width: 400px;
+    max-width: 700px;
+  }
+
+  .image-container img {
+    height: auto;
+    width: 95%;
+    box-shadow: 0 0 15px 5px rgba(150, 144, 144, 0.66);
   }
 }
 
-
-@media (max-width: 560px) {
-
+@media (max-width: 550px) {
+  .projects-title {
+    font-size: 50px;
+  }
 
   .image-container {
     width: 95%;
+  }
+
+  .image-container img {
+    width: auto;
+    height: 20vh;
   }
 
   .text-container {
@@ -231,17 +237,5 @@
     padding-right: 10px;
   }
 
-  .btn-image-up {
-    top: 38%;
-    width: 20px;
-    height: 20px;
-  }
-
-  .btn-image-down {
-    top: 38%;
-    width: 20px;
-    height: 20px;
-  }
-  
 
 }
