--- a/src/styles/scrollBtn.module.css
+++ b/src/styles/scrollBtn.module.css
@@ -2,17 +2,17 @@
   width: 60px;
   height: 60px;
   position: fixed;
-  bottom: 30px;
+  bottom: 100px;
   right: 30px;
   opacity: 0;
   transition: all 0.4s ease;
   cursor: pointer;
-  background-color: #014e45;
+  background-color: #014e4547;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: whitesmoke;
+  color: rgba(245, 245, 245, 0.484);
   font-size: 30px;
   box-shadow: 0 0 2px 2px rgba(128, 128, 128, 0.466);
 }
