--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -86,15 +86,16 @@
 
 .image-container {
   width: 65%;
-  max-height: 55vh;
+  max-height: 100vh;
   display: flex;
   justify-content: center;
   position: relative;
 }
 
 .image-container img {
+  width: 100%;
   
-  height: 55vh;
+  /* height: 55vh; */
   box-shadow: 0 0 15px 5px rgba(150, 144, 144, 0.66);
 }
 
@@ -192,6 +193,7 @@
 
   .image-container {
     width: 80%;
+    /* height: 40vh; */
   }
 
   .text-container {
@@ -200,6 +202,7 @@
 }
 
 @media (max-width: 900px) {
+
   .project-container {
     grid-template-columns: repeat(1, 1fr);
     place-items: center;
@@ -210,11 +213,20 @@
     max-width: 700px;
   }
 
+  .image-container {
+    width: 90%;
+    /* height: fit-content; */
+  } 
+
   .image-container img {
-    height: auto;
-    width: 95%;
+    /* height: 100%; */
+    max-width: 95vw;
+    /* width: 100%; */
+    /* max-width: 95vw; */
+    /* height:30vh; */
     box-shadow: 0 0 15px 5px rgba(150, 144, 144, 0.66);
   }
+
 }
 
 @media (max-width: 550px) {
@@ -227,8 +239,7 @@
   }
 
   .image-container img {
-    width: auto;
-    height: 20vh;
+    /* height: 20vh; */
   }
 
   .text-container {
@@ -238,4 +249,23 @@
   }
 
 
+}
+
+
+
+
+
+@keyframes projectEnter {
+  0% {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.project-enter {
+  animation: projectEnter 0.8s ease forwards;
 }
