--- a/src/styles/banner.module.css
+++ b/src/styles/banner.module.css
@@ -232,7 +232,7 @@
 
 .title h1 {
   color: white;
-  font-size: 5vw;
+  font-size: 4vw;
   font-weight: 300;
 }
 
@@ -256,42 +256,65 @@
 }
 
 @media (max-width: 1100px) {
-  .banner-container {
+  .image-container img {
+    width: 200px;
+    height: 200px;
+  }
+}
+
+@media (max-width: 900px) {
+  /* .banner-container {
     flex-direction: column-reverse;
     justify-content: space-around;
-  }
-
-  .image-container {
-    width: 100%;
-    height: 50%;
   }
 
   .title {
     width: 100%;
     height: 50%;
     padding-left: 20px;
+    max-width: 600px;
+  } */
+
+  .image-container img {
+    width: 150px;
+    height: 150px;
   }
+
 }
 
 @media (max-width: 550px) {
+
+  .banner-container {
+    flex-direction: column-reverse;
+    justify-content: space-around;
+  }
+
   .title {
+    width: 100%;
+    height: 50%;
+    padding-left: 20px;
+    max-width: 600px;
     margin-top: 50px;
   }
+
+
   .title h1 {
     font-size: 40px;
   }
 
   .title button {
-    margin-top: 30px;
+    margin-top: 10px;
     width: 200px;
   }
   .image-container {
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.233);
     height: 35%;
   }
   .image-container img {
     width: 100%;
-    border-radius:0%;
+    border-radius: 0%;
     box-shadow: 0 0 5px 2px rgba(255, 255, 255, 0.361);
+    height: auto;
   }
 }
