--- a/src/styles/nav.module.css
+++ b/src/styles/nav.module.css
@@ -153,8 +153,60 @@
   }
 }
 
-@media (max-width: 550px) {
-  .nav-container {
+@keyframes openNav {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@media (min-width: 901px) {
+  .hamburger-container {
     display: none;
+  }
+}
+
+@media (max-width: 900px) {
+  .nav-container {
+    padding: 0 0 0 20px;
+  }
+  
+  .logo {
+    padding-left: 20px; /* Ajusta el valor de padding izquierdo según tus necesidades */
+  }
+  .nav-container nav {
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    flex-direction: column;
+    gap: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.769);
+    z-index: 10;
+    padding-top: 100px;
+    transition: ease 0.5s all;
+    animation: openNav 0.5s linear;
+  }
+
+  .nav-container nav a {
+    text-align: center;
+    width: 100%;
+    color: white;
+    font-size: 25px;
+    border-bottom: solid 0.5px rgba(169, 165, 165, 0.646);
+    padding-bottom: 15px;
+    padding-top: 15px;
+  }
+
+  .nav-container nav a:hover {
+    background-color: rgba(255, 255, 255, 0.224);
+  }
+
+  .hamburger-container {
+    visibility: visible;
   }
 }
