--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -11,7 +11,7 @@
 }
 
 .form-container {
-  width: 1100px;
+  max-width: 1100px;
   display: flex;
   justify-content: center;
 
@@ -134,36 +134,42 @@
   background-color: #137d7b;
 }
 
-.contacts {
+/* .contacts {
   width: 800px;
   display: flex;
   flex-direction: column;
   gap: 30px;
   padding: 45px 0 0 170px;
   color: whitesmoke;
-}
+} */
 
-.contact-icon {
+/* .contact-icon {
   display: flex;
   gap: 10px;
-}
+} */
 
 @media (max-width: 1150px) {
   .contact-container {
+    width: 100%;
     height: fit-content;
   }
 
+  .contact-form {
+    width: 100%;
+  }
+
   .form-container {
-    width: fit-content;
+    width: 80%;
     flex-direction: column;
     margin-bottom: 30px;
   }
+
 
   .contact-title {
     margin-bottom: 30px;
   }
 
-  .contacts {
+  /* .contacts {
     width: fit-content;
     display: flex;
     flex-direction: column;
@@ -173,7 +179,7 @@
     padding-top: 20px;
     padding-bottom: 15px;
     color: whitesmoke;
-  }
+  } */
 }
 
 @media (max-width: 550px) {
